# yourjobfinder_jobmatcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_schema.py  app.py  base_model.py  docker-compose.yml  external_model.py  prompt_judge_template.txt  prompt_template.txt  pyproject.toml  similarity_search.py  utils.py
scripts/: dummy_input.md  single_request.py  single_request_with_judge.py
tests/: conftest.py  test_app.py  test_base_model.py  test_external_model.py  test_similarity_search.py  test_utils.py
