[project]
name = "novel-job-matching"
version = "0.1.0"
description = "Unified inference API for multiple model backends"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.2",
    "uvicorn[standard]>=0.30.6",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "transformers[sentencepiece]>=4.56.1",
    "torch>=2.8.0",
    "accelerate>=0.33.0",
    "markdownify>=0.13.1",
    "outlines[transformers]",
    "protobuf>=4.25,<6",
    "sentence-transformers>=5.1.1",
    "numpy",
    "pandas",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
