[project]
name = "novel-job-matching"
version = "0.1.0"
description = "Unified inference API for multiple model backends"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.2",
    "uvicorn[standard]>=0.30.6",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "torch>=2.8.0",
    "outlines",
    "protobuf>=4.25,<6",
    "sentence-transformers>=5.1.1",
    "openai"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

